--- a/serie.html
+++ b/serie.html
@@ -1,89 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>BUSANSO – Series Player</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<script src="series-data.js"></script>
-
-<!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
-<script>
-const firebaseConfig = {
-  apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
-  authDomain: "busanso-pins.firebaseapp.com",
-  databaseURL: "https://busanso-pins-default-rtdb.firebaseio.com",
-  projectId: "busanso-pins",
-  storageBucket: "busanso-pins.firebasestorage.app",
-  messagingSenderId: "137040014808",
-  appId: "1:137040014808:web:b0684e17b6b0328da596ad"
-};
-firebase.initializeApp(firebaseConfig);
-</script>
-
-<style>
-body { margin:0; background:#000; color:#fff; font-family:Arial,sans-serif; padding:16px; }
-.logo { text-align:center; margin-bottom:12px; }
-.logo img { max-height:50px; }
-.player { width:100%; max-width:800px; margin:0 auto; }
-.player iframe { width:100%; height:56vw; max-height:500px; border:none; }
-.player-nav { max-width:800px; margin:10px auto; display:flex; gap:10px; }
-.player-nav button { flex:1; padding:14px; font-size:16px; border:none; border-radius:10px; font-weight:bold; background:#222; color:#fff; cursor:pointer; }
-.player-nav button:disabled { opacity:0.5; cursor:not-allowed; }
-.details { max-width:800px; margin:16px auto; padding:16px; background:#111; border-radius:12px; }
-.meta { color:#aaa; font-size:14px; margin-bottom:8px; }
-.actions button { width:100%; padding:16px; margin-top:12px; font-size:16px; border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
-.watch { background:#e50914; color:#fff; }
-.secondary { background:#222; color:#fff; margin-top:8px; }
-.episodes { display:grid; gap:8px; margin-top:10px; }
-.episode { background:#181818; padding:12px; border-radius:8px; cursor:pointer; }
-.episode.active { background:#e50914; font-weight:bold; }
-.cast span { background:#181818; padding:6px 10px; border-radius:20px; font-size:12px; margin:4px; display:inline-block; }
-
-/* COMMENTS */
-#commentsSection { max-width:800px; margin:20px auto; background:#111; padding:16px; border-radius:12px; }
-#commentsList div { margin-bottom:6px; padding:8px 10px; background:#222; border-radius:8px; position:relative; word-wrap:break-word; }
-#usernameInput, #commentInput { width:100%; padding:10px; border-radius:6px; background:#111; color:#fff; border:none; margin-top:6px; }
-#commentBtn { margin-top:8px; padding:10px 18px; border:none; border-radius:8px; background:#e50914; color:#fff; font-weight:bold; cursor:pointer; font-size:15px; }
-#commentMsg { margin-top:6px; font-size:14px; }
-</style>
-</head>
-
-<body>
-
-<div class="logo">
-  <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
-</div>
-
-<div class="player" id="player"></div>
-
-<div class="player-nav">
-  <button id="prevBtn">⏮ Previous</button>
-  <button id="nextBtn">Next ⏭</button>
-</div>
-
-<div class="details">
-  <h1 id="title"></h1>
-  <div class="meta" id="meta"></div>
-  <button class="watch" id="watchBtn">▶ Watch Now</button>
-  <button class="secondary" onclick="toggleEpisodes()">📺 Episodes</button>
-  <p id="synopsis"></p>
-  <div class="cast" id="cast"></div>
-  <div class="episodes" id="episodeList" style="display:none"></div>
-</div>
-
-<div id="commentsSection">
-  <h3>Comments</h3>
-  <input id="usernameInput" placeholder="Enter your name">
-  <textarea id="commentInput" placeholder="Write your comment"></textarea>
-  <button id="commentBtn">Post Comment</button>
-  <div id="commentMsg"></div>
-  <div id="commentsList"></div>
-</div>
-
 <script>
 // ===== SERIES DATA =====
 const params = new URLSearchParams(location.search);
@@ -112,14 +26,27 @@ serie.episodes.forEach((ep,i) => {
   episodeList.appendChild(div);
 });
 
-// Normalize video URLs
-function normalizeVideo(u){
-  try{
-    if(u.includes("youtube")) return "https://www.youtube.com/embed/"+new URL(u).searchParams.get("v");
-    if(u.includes("vimeo")) return "https://player.vimeo.com/video/"+u.split("/").pop();
-    if(u.includes("/d/")) return "https://drive.google.com/file/d/"+u.split("/d/")[1].split("/")[0]+"/preview";
-    return u;
-  }catch{return u;}
+// ===== NORMALIZE VIDEO URL =====
+function normalizeVideo(url){
+  try {
+    url = url.trim();
+    if(url.includes("youtube.com") || url.includes("youtu.be")) {
+      // Youtube: extract video ID
+      const ytId = url.includes("v=") ? new URL(url).searchParams.get("v") : url.split("/").pop();
+      return `https://www.youtube.com/embed/${ytId}`;
+    }
+    if(url.includes("vimeo.com")) {
+      const vimeoId = url.split("/").pop();
+      return `https://player.vimeo.com/video/${vimeoId}`;
+    }
+    if(url.includes("/d/")) {
+      const driveId = url.split("/d/")[1].split("/")[0];
+      return `https://drive.google.com/file/d/${driveId}/preview`;
+    }
+    return url; // fallback to raw URL
+  } catch {
+    return url;
+  }
 }
 
 // ===== PIN CHECK FOR PREMIUM SERIES =====
@@ -164,14 +91,12 @@ const commentInput = document.getElementById("commentInput");
 const commentMsg = document.getElementById("commentMsg");
 const commentsList = document.getElementById("commentsList");
 
-// Load nickname from localStorage
 const savedName = localStorage.getItem("username");
 if(savedName) usernameInput.value = savedName;
 
 commentBtn.onclick = () => {
   const name = usernameInput.value.trim();
   const text = commentInput.value.trim();
-
   if(name.length < 2 || name.length > 20){
     commentMsg.style.color="#ffb400";
     commentMsg.textContent="Nickname must be 2–20 characters";
@@ -182,7 +107,6 @@ commentBtn.onclick = () => {
     commentMsg.textContent="Comment must be 2–300 characters";
     return;
   }
-
   localStorage.setItem("username", name);
   commentsRef.push({ user:name, text, timestamp:Date.now() });
   commentInput.value="";
@@ -210,6 +134,3 @@ commentsRef.on("value", snap => {
   });
 });
 </script>
-
-</body>
-</html>
