--- a/movie.html
+++ b/movie.html
@@ -25,19 +25,35 @@ firebase.initializeApp(firebaseConfig);
 </script>
 
 <style>
-body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16px}
-.player{max-width:800px;margin:0 auto}
-.player iframe{width:100%;height:56vw;max-height:450px;border:none}
-.details{max-width:800px;margin:16px auto;background:#111;padding:16px;border-radius:12px}
-.meta{color:#aaa;font-size:14px;margin-bottom:8px}
-.actions button{width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;font-weight:bold;cursor:pointer}
-.watch{background:#e50914;color:#fff}
+body { margin:0; background:#000; color:#fff; font-family:Arial,sans-serif; padding:16px; }
+.player { max-width:800px; margin:0 auto; }
+.player iframe { width:100%; height:56vw; max-height:450px; border:none; border-radius:8px; }
+.details { max-width:800px; margin:16px auto; background:#111; padding:16px; border-radius:12px; }
+.meta { color:#aaa; font-size:14px; margin-bottom:8px; }
+
+/* WATCH BUTTON BIG & NOTICEABLE */
+.watch {
+  background:#e50914;
+  color:#fff;
+  font-size:20px;
+  padding:16px;
+  width:100%;
+  border:none;
+  border-radius:12px;
+  font-weight:bold;
+  cursor:pointer;
+  box-shadow:0 6px 20px rgba(0,0,0,0.6);
+  transition:transform 0.2s ease;
+}
+.watch:hover {
+  transform:scale(1.05);
+}
 
 /* COMMENTS */
-#commentsSection{max-width:800px;margin:20px auto;background:#111;padding:16px;border-radius:12px}
-#commentsList div{background:#222;padding:8px 10px;border-radius:8px;margin-bottom:6px;position:relative}
-#usernameInput,#commentInput{width:100%;padding:8px;border-radius:6px;background:#111;color:#fff;border:none;margin-bottom:6px}
-#commentBtn{padding:8px 16px;border:none;border-radius:8px;background:#e50914;color:#fff;font-weight:bold;cursor:pointer}
+#commentsSection { max-width:800px; margin:20px auto; background:#111; padding:16px; border-radius:12px; }
+#commentsList div { background:#222; padding:8px 10px; border-radius:8px; margin-bottom:6px; position:relative; }
+#usernameInput,#commentInput { width:100%; padding:8px; border-radius:6px; background:#111; color:#fff; border:none; margin-bottom:6px; }
+#commentBtn { padding:8px 16px; border:none; border-radius:8px; background:#e50914; color:#fff; font-weight:bold; cursor:pointer; }
 </style>
 </head>
 
@@ -75,15 +91,35 @@ synopsis.textContent = movie.synopsis||"";
 // ===== VIDEO PLAYBACK (all types) =====
 function normalizeVideo(url){
   try{
-    if(url.includes("youtube")) return "https://www.youtube.com/embed/"+new URL(url).searchParams.get("v");
-    if(url.includes("vimeo")) return "https://player.vimeo.com/video/"+url.split("/").pop();
-    if(url.includes("/d/")) return "https://drive.google.com/file/d/"+url.split("/d/")[1].split("/")[0]+"/preview";
+    url = url.trim();
+    // YouTube standard or short URLs
+    if(url.includes("youtube.com") || url.includes("youtu.be")){
+      let vidId = "";
+      if(url.includes("youtu.be")){
+        vidId = url.split("/").pop();
+      } else {
+        vidId = new URL(url).searchParams.get("v");
+      }
+      return `https://www.youtube.com/embed/${vidId}?rel=0&autoplay=1`;
+    }
+    // Vimeo
+    if(url.includes("vimeo.com")){
+      const vimeoId = url.split("/").pop();
+      return `https://player.vimeo.com/video/${vimeoId}?autoplay=1`;
+    }
+    // Google Drive
+    if(url.includes("/d/")){
+      const driveId = url.split("/d/")[1].split("/")[0];
+      return `https://drive.google.com/file/d/${driveId}/preview`;
+    }
     return url;
-  }catch(e){ return url; }
+  } catch(e){
+    return url;
+  }
 }
 
 watchBtn.onclick = () => {
-  player.innerHTML = `<iframe src="${normalizeVideo(movie.video)}" allowfullscreen></iframe>`;
+  player.innerHTML = `<iframe src="${normalizeVideo(movie.video)}" allowfullscreen autoplay></iframe>`;
 };
 
 // ===== COMMENTS =====
@@ -124,7 +160,16 @@ commentsRef.limitToLast(100).on("value", snap => {
     if(localStorage.getItem("activePIN")==="Orion196"){
       const b = document.createElement("button");
       b.textContent = "🗑";
-      Object.assign(b.style,{position:"absolute",right:"6px",top:"6px",background:"#e50914",color:"#fff",border:"none",borderRadius:"4px",cursor:"pointer"});
+      Object.assign(b.style,{
+        position:"absolute",
+        right:"6px",
+        top:"6px",
+        background:"#e50914",
+        color:"#fff",
+        border:"none",
+        borderRadius:"4px",
+        cursor:"pointer"
+      });
       b.onclick = ()=>c.ref.remove();
       div.appendChild(b);
     }
